docs/authorization-policies/manifests/authorization-policies/authorizationpolicy_adservice.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: adservice
spec:
  selector:
    matchLabels:
      app: adservice
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/frontend
    to:
    - operation:
        paths:
        - /hipstershop.AdService/GetAds
        methods:
        - POST
        ports:
        - "9555"
