docs/authorization-policies/manifests/authorization-policies/authorizationpolicy_frontend.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  rules:
  - from:
    - source:
        principals:
        - '*'
    to:
    - operation:
        methods:
        - GET
        - POST
        ports:
        - "8080"
