docs/authorization-policies/manifests/authorization-policies/authorizationpolicy_recommendationservice.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: recommendationservice
spec:
  selector:
    matchLabels:
      app: recommendationservice
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/frontend
    to:
    - operation:
        paths:
        - /hipstershop.RecommendationService/ListRecommendations
        methods:
        - POST
        ports:
        - "8080"
